objects/ASI_MFM_Route_Type__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Backup_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Backup_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ByPassThreshold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this flag if approval path is different base on amount (For HK MFM Sales)</inlineHelpText>
        <label>Is Route Type By Pass Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Country__c</fullName>
        <formula>TEXT( Owner:User.ASI_MFM_Country__c )</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_EUR_rate__c</fullName>
        <label>EUR rate</label>
        <precision>17</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Route_Type_Department__c</fullName>
        <label>MFM Route Type Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Community Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sales_Route_Type_Amount_From__c</fullName>
        <inlineHelpText>MFM Amount &gt; Route Type Amount &quot;From&quot;</inlineHelpText>
        <label>Route Type by Amount (From)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sales_Route_Type_Amount_To__c</fullName>
        <inlineHelpText>MFM Amount &lt;= Route Type Amount &quot;To&quot;</inlineHelpText>
        <label>Route Type by Amount (To)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <defaultValue>&apos;ATR&apos;</defaultValue>
        <label>TR Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Owner Invoice</fullName>
                </value>
                <value>
                    <fullName>Structured Cost Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI MFM Route Type</label>
    <listViews>
        <fullName>ASI_MFM_CAP_HK_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Company_Code__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Sales_Route_Type_Amount_From__c</columns>
        <columns>ASI_MFM_Sales_Route_Type_Amount_To__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_CAP_HK_Route_Type</value>
        </filters>
        <label>CAP HK Route Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_SG_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_CAP_SG_Route_Type</value>
        </filters>
        <label>CAP SG Route Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_TW_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_CAP_OTH_Route_Type</value>
        </filters>
        <filters>
            <field>ASI_MFM_Country__c</field>
            <operation>equals</operation>
            <value>TW</value>
        </filters>
        <label>CAP TW Route Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_HK</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Sales_Route_Type_Amount_From__c</columns>
        <columns>ASI_MFM_Sales_Route_Type_Amount_To__c</columns>
        <columns>ASI_MFM_Backup_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_HK_Route_Type</value>
        </filters>
        <label>HK</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_SG_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_SG_Route_Type</value>
        </filters>
        <label>SG Route Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_TH</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_TH_Route_Type</value>
        </filters>
        <label>TH</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_TH_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAP_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_CAP_Route_Type</value>
        </filters>
        <label>CAP Route Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_Regional_IT_Dept_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GF</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_GF_MFM_Route_Type</value>
        </filters>
        <label>GF</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_GF</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Sales_Route_Type_Amount_From__c</columns>
        <columns>ASI_MFM_Sales_Route_Type_Amount_To__c</columns>
        <columns>ASI_MFM_ByPassThreshold__c</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_JP_Route_Type</value>
        </filters>
        <label>JP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_TR_Rec_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_TR_MFM_Route_Type</value>
        </filters>
        <label>TR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TW</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Country__c</columns>
        <columns>ASI_MFM_Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Route_Type__c.ASI_MFM_TW_Route_Type</value>
        </filters>
        <label>TW</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_PowerUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Route Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI MFM Route Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_HK_Route_Type</fullName>
        <active>true</active>
        <label>CAP HK Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_OTH_Route_Type</fullName>
        <active>true</active>
        <label>CAP Other Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_Route_Type</fullName>
        <active>true</active>
        <label>CAP Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_SG_Route_Type</fullName>
        <active>true</active>
        <label>CAP SG Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_MFM_Route_Type</fullName>
        <active>true</active>
        <label>CN MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_MFM_Route_Type</fullName>
        <active>true</active>
        <label>GF MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_Route_Type</fullName>
        <active>true</active>
        <label>HK MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Route_Type</fullName>
        <active>true</active>
        <label>JP MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Route_Type</fullName>
        <active>true</active>
        <label>KR MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_MFM_Route_Type</fullName>
        <active>true</active>
        <label>MY MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_Route_Type</fullName>
        <active>true</active>
        <label>PH MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SC_Route_Type</fullName>
        <active>true</active>
        <label>SC Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SG_Route_Type</fullName>
        <active>true</active>
        <label>SG MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_Route_Type</fullName>
        <active>true</active>
        <description>ASI_MFM_TH_Route_Type</description>
        <label>TH MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TR_MFM_Route_Type</fullName>
        <active>true</active>
        <label>TR MFM Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Route_Type</fullName>
        <active>true</active>
        <label>ASI_MFM_TW_Route_Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>